--- a/.classpath
+++ b/.classpath
@@ -6,23 +6,42 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry including="**/*.java" kind="src" path="src/main/resources"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry including="**/*.java" kind="src" output="target/test-classes" path="src/test/resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="jar files/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="jar files/javax.inject.jar"/>
+	<classpathentry kind="lib" path="jar files/spring-aop-4.3.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="jar files/spring-beans-4.3.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="jar files/spring-context-4.3.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="jar files/spring-context-support-4.3.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="jar files/spring-core-4.3.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="jar files/spring-expression-4.3.3.RELEASE.jar"/>
+	<classpathentry kind="lib" path="jar files/aspectj-1.8.10.jar"/>
+	<classpathentry kind="lib" path="jar files/slf4j-api-1.7.22.jar"/>
+	<classpathentry kind="lib" path="jar files/slf4j-log4j12-1.7.22.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
