--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver_class=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/npu_mobile
+jdbc.url=jdbc:mysql://localhost/npumobiledb
 jdbc.username=npumobileuser
 jdbc.password=spring
 
