--- a/.classpath
+++ b/.classpath
@@ -32,7 +32,6 @@
 	<classpathentry kind="lib" path="jar files/spring-expression-4.3.3.RELEASE.jar"/>
 	<classpathentry kind="lib" path="jar files/aspectj-1.8.10.jar"/>
 	<classpathentry kind="lib" path="jar files/slf4j-api-1.7.22.jar"/>
-	<classpathentry kind="lib" path="jar files/slf4j-log4j12-1.7.22.jar"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -41,7 +40,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
