--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver_class=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost/npumobiledb
-jdbc.username=npumobileuser
-jdbc.password=spring
+jdbc.url=jdbc:mysql://mysqlinstance.cd2ayerkesdk.us-west-2.rds.amazonaws.com:3306/npumobiledb
+jdbc.username=master
+jdbc.password=password
 
 #hibernate related setting		
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
