--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,11 @@
 			<artifactId>crawler4j</artifactId>
 			<version>4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
